[gd_scene load_steps=15 format=3 uid="uid://8hpme1hf8mb3"]

[ext_resource type="Script" path="res://Scripts/blaster.gd" id="1_wxbtt"]
[ext_resource type="PackedScene" uid="uid://crea60novs5m6" path="res://Blender/Tower/Blaster.glb" id="2_vo8ln"]
[ext_resource type="PackedScene" uid="uid://d15civcg127cm" path="res://Scenes/PolyphonicAudioPlayer.tscn" id="4_onqsd"]
[ext_resource type="Script" path="res://Scripts/Classes/AudioLibrary.gd" id="5_s2d2g"]
[ext_resource type="Script" path="res://Scripts/Classes/SoundEffect.gd" id="6_7b55l"]
[ext_resource type="AudioStream" uid="uid://dici8f2topobt" path="res://Sounds/shoot-blaster.wav" id="6_ag6us"]
[ext_resource type="AudioStream" uid="uid://cmwygx3c8ahqb" path="res://Sounds/level.wav" id="7_74ioj"]

[sub_resource type="BoxShape3D" id="BoxShape3D_pj27w"]
size = Vector3(1, 0.2, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_ngysx"]
radius = 1.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hvg1x"]
transparency = 1
blend_mode = 1
albedo_color = Color(0.24, 1, 0.544, 0.0980392)

[sub_resource type="SphereMesh" id="SphereMesh_e4t3m"]
material = SubResource("StandardMaterial3D_hvg1x")
radius = 1.5
height = 3.0

[sub_resource type="Resource" id="Resource_cg51h"]
script = ExtResource("6_7b55l")
tag = "shoot"
stream = ExtResource("6_ag6us")

[sub_resource type="Resource" id="Resource_re12c"]
script = ExtResource("6_7b55l")
tag = "level"
stream = ExtResource("7_74ioj")

[sub_resource type="Resource" id="Resource_ixku5"]
script = ExtResource("5_s2d2g")
sound_effects = Array[ExtResource("6_7b55l")]([SubResource("Resource_cg51h"), SubResource("Resource_re12c")])

[node name="Blaster" type="StaticBody3D"]
script = ExtResource("1_wxbtt")
bullet_damage = 1

[node name="WeaponMesh" parent="." instance=ExtResource("2_vo8ln")]
transform = Transform3D(-0.5, 0, -7.54979e-08, 0, 0.5, 0, 7.54979e-08, 0, -0.5, 0, 0, 0)

[node name="Aim1" type="Marker3D" parent="WeaponMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.131118, 0.570549, 0.449858)

[node name="Aim2" type="Marker3D" parent="WeaponMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.131118, 0.570549, 0.449858)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_pj27w")

[node name="MobDetector" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MobDetector"]
shape = SubResource("SphereShape3D_ngysx")

[node name="DisplayRange" type="MeshInstance3D" parent="MobDetector"]
visible = false
mesh = SubResource("SphereMesh_e4t3m")
skeleton = NodePath("")

[node name="BulletContainer" type="Node" parent="."]

[node name="ShotCooldown" type="Timer" parent="."]
wait_time = 0.4

[node name="PolyphonicAudioPlayer" parent="." instance=ExtResource("4_onqsd")]
audio_library = SubResource("Resource_ixku5")

[connection signal="body_entered" from="MobDetector" to="." method="_on_mob_detector_body_entered"]
[connection signal="body_exited" from="MobDetector" to="." method="_on_mob_detector_body_exited"]
[connection signal="timeout" from="ShotCooldown" to="." method="_on_shot_cooldown_timeout"]
